@@ -17,6 +17,8 @@ New interface for choosing images focal point
 Minor features
 ~~~~~~~~~~~~~~
 
+ * The ``content_type`` template filter has been removed from the project template, as the same thing can be accomplished with ``self.get_verbose_name|slugify``.
+
 
 Bug fixes
 ~~~~~~~~~
